// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link component can be nested within Text and Heading 1`] = `
@media  {
  .c-bmSGqY {
    background: unset;
    border: unset;
    padding: unset;
    color: var(--colors-primary800);
    cursor: pointer;
    font-family: var(--fonts-body);
    text-decoration: none;
  }

  .c-bmSGqY:focus,
  .c-bmSGqY:hover {
    color: var(--colors-primary900);
    text-decoration: underline;
  }

  .c-bmSGqY:active {
    color: var(--colors-primary1000);
  }

  .c-bmSGqY[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
    pointer-events: none;
  }

  .c-dyvMgW > .c-bmSGqY,
  .c-jryFOR > .c-bmSGqY,
  .c-PJLV > .c-bmSGqY,
  .c-bYNGXt > .c-bmSGqY {
    font-size: 100%;
    line-height: 1;
  }

  .c-dyvMgW > .c-bmSGqY::before,
  .c-dyvMgW > .c-bmSGqY::after,
  .c-jryFOR > .c-bmSGqY::before,
  .c-jryFOR > .c-bmSGqY::after,
  .c-PJLV > .c-bmSGqY::before,
  .c-PJLV > .c-bmSGqY::after,
  .c-bYNGXt > .c-bmSGqY::before,
  .c-bYNGXt > .c-bmSGqY::after {
    content: none;
  }

  .c-dyvMgW {
    font-family: var(--fonts-body);
    font-weight: 400;
    margin: 0;
  }

  .c-dyvMgW > .c-dyvMgW:before,
  .c-dyvMgW > .c-dyvMgW:after {
    display: none;
  }

  .c-jryFOR {
    font-family: var(--fonts-display);
    font-weight: 700;
    margin: 0;
  }
}

@media  {
  .c-bmSGqY-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-bmSGqY-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-bmSGqY-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-bmSGqY-jvTRJO-size-lg {
    font-size: var(--fontSizes-lg);
    line-height: 1.52;
  }

  .c-bmSGqY-jvTRJO-size-lg::before {
    content: '';
    margin-bottom: -0.3983em;
    display: table;
  }

  .c-bmSGqY-jvTRJO-size-lg::after {
    content: '';
    margin-top: -0.3983em;
    display: table;
  }

  .c-bmSGqY-fmPQHp-noCapsize-true::before,
  .c-bmSGqY-fmPQHp-noCapsize-true::after {
    display: none !important;
  }

  .c-dyvMgW-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-dyvMgW-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-dyvMgW-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-jryFOR-fOoUdm-size-md {
    font-size: var(--fontSizes-xl);
    line-height: 1.14;
  }

  .c-jryFOR-fOoUdm-size-md::before {
    content: '';
    margin-bottom: -0.2174em;
    display: table;
  }

  .c-jryFOR-fOoUdm-size-md::after {
    content: '';
    margin-top: -0.2254em;
    display: table;
  }
}

<div>
  <p
    class="c-dyvMgW c-dyvMgW-gvmVBy-size-md"
  >
    <button
      class="c-bmSGqY c-bmSGqY-gvmVBy-size-md c-bmSGqY-fmPQHp-noCapsize-true"
    >
      TEXT LINK
    </button>
  </p>
  <h2
    class="c-jryFOR c-jryFOR-fOoUdm-size-md"
  >
    <button
      class="c-bmSGqY c-bmSGqY-gvmVBy-size-md c-bmSGqY-fmPQHp-noCapsize-true"
    >
      HEADING LINK
    </button>
  </h2>
</div>
`;

exports[`Link component renders an anchor 1`] = `
@media  {
  .c-bmSGqY {
    background: unset;
    border: unset;
    padding: unset;
    color: var(--colors-primary800);
    cursor: pointer;
    font-family: var(--fonts-body);
    text-decoration: none;
  }

  .c-bmSGqY:focus,
  .c-bmSGqY:hover {
    color: var(--colors-primary900);
    text-decoration: underline;
  }

  .c-bmSGqY:active {
    color: var(--colors-primary1000);
  }

  .c-bmSGqY[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
    pointer-events: none;
  }

  .c-dyvMgW > .c-bmSGqY,
  .c-jryFOR > .c-bmSGqY,
  .c-PJLV > .c-bmSGqY,
  .c-bYNGXt > .c-bmSGqY {
    font-size: 100%;
    line-height: 1;
  }

  .c-dyvMgW > .c-bmSGqY::before,
  .c-dyvMgW > .c-bmSGqY::after,
  .c-jryFOR > .c-bmSGqY::before,
  .c-jryFOR > .c-bmSGqY::after,
  .c-PJLV > .c-bmSGqY::before,
  .c-PJLV > .c-bmSGqY::after,
  .c-bYNGXt > .c-bmSGqY::before,
  .c-bYNGXt > .c-bmSGqY::after {
    content: none;
  }
}

@media  {
  .c-bmSGqY-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-bmSGqY-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-bmSGqY-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }
}

<div>
  <a
    class="c-bmSGqY c-bmSGqY-gvmVBy-size-md"
    href="https://google.com/"
    rel="noopener noreferrer"
    target="_blank"
  >
    GOOGLE
  </a>
</div>
`;

exports[`Link component renders an large anchor 1`] = `
@media  {
  .c-bmSGqY {
    background: unset;
    border: unset;
    padding: unset;
    color: var(--colors-primary800);
    cursor: pointer;
    font-family: var(--fonts-body);
    text-decoration: none;
  }

  .c-bmSGqY:focus,
  .c-bmSGqY:hover {
    color: var(--colors-primary900);
    text-decoration: underline;
  }

  .c-bmSGqY:active {
    color: var(--colors-primary1000);
  }

  .c-bmSGqY[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
    pointer-events: none;
  }

  .c-dyvMgW > .c-bmSGqY,
  .c-jryFOR > .c-bmSGqY,
  .c-PJLV > .c-bmSGqY,
  .c-bYNGXt > .c-bmSGqY {
    font-size: 100%;
    line-height: 1;
  }

  .c-dyvMgW > .c-bmSGqY::before,
  .c-dyvMgW > .c-bmSGqY::after,
  .c-jryFOR > .c-bmSGqY::before,
  .c-jryFOR > .c-bmSGqY::after,
  .c-PJLV > .c-bmSGqY::before,
  .c-PJLV > .c-bmSGqY::after,
  .c-bYNGXt > .c-bmSGqY::before,
  .c-bYNGXt > .c-bmSGqY::after {
    content: none;
  }
}

@media  {
  .c-bmSGqY-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-bmSGqY-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-bmSGqY-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-bmSGqY-jvTRJO-size-lg {
    font-size: var(--fontSizes-lg);
    line-height: 1.52;
  }

  .c-bmSGqY-jvTRJO-size-lg::before {
    content: '';
    margin-bottom: -0.3983em;
    display: table;
  }

  .c-bmSGqY-jvTRJO-size-lg::after {
    content: '';
    margin-top: -0.3983em;
    display: table;
  }
}

<div>
  <a
    class="c-bmSGqY c-bmSGqY-jvTRJO-size-lg"
    href="https://google.com/"
    rel="noopener noreferrer"
    target="_blank"
  >
    GOOGLE
  </a>
</div>
`;
